refactor: add configuration for hazelcast to allow access to other java 9 modules and refactor dependencies